# mse-project-group1

./: README.md  config.py  conftest.py  endpoint.py  endpoints.py  placeholder_gen.ipynb  requirements.txt  start.sh
autocomplete_system/: __init__.py  config.py  trainer.py
autocomplete_system/data/: __init__.py  loader.py
autocomplete_system/models/: __init__.py  base.py  datamuse.py  ngram.py
autocomplete_system/services/: __init__.py  autocomplete.py
batch/: run_queries.py
batch/queries/: queries.txt
crawler/: crawler.py
crawler/crawler_2/: conversion.py  crawler.py  logger.py  main.py  new.sql  setup.sql  simhashing_db.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
retrieval_engine/: __init__.py  bm25_retriever.py  cross_encoder_reranker.py  pyproject.toml  rocchio_prf.py
retrieval_engine/core/: __init__.py  engine.py
retrieval_engine/docs/: __init__.py  document_store.py
retrieval_engine/enhancement/: __init__.py  reranking.py  rocchio_prf.py
retrieval_engine/fusion/: __init__.py  rrf.py
retrieval_engine/retrievers/: __init__.py  dense.py  sparse.py
retrieval_engine/src/: __init__.py
retrieval_engine/src/retrieval_engine/: cross_encoder_reranker.py  dense_retriever.py  retrieval_engine.py  rocchio_prf.py  rrf.py
retrieval_engine/src/retrieval_pipeline/: __init__.py  bm25_indexer.py  dense_retriever.py
retrieval_engine/tests/: conftest.py  test_bm25_reuters.py  test_dense_retriever_reuters.py  test_engine.py  test_utils.py
tests/: conftest.py
tests/autocomplete_system/: test_autocomplete_service.py  test_datamuse_model.py  test_ngram_model.py  test_trainer.py
tests/retrieval_engine/: conftest.py  test_bm25_reuters.py  test_dense_retriever_reuters.py  (+2 more)
(+6 files in other folders)
