[tool.poetry]
name = "hybrid-retrieval-pipeline"
version = "0.1.0"
description = "Hybrid retrieval pipeline (BM25, SBERT, RRF, Cross-Encoder)"
authors = ["mse-team 1"]
packages = [{ include = "retrieval_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
tqdm = "^4.66"
sentence-transformers = "^2.7"
transformers = "^4.42"
torch = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.3"
isort = "^5.13"
mypy = "^1.10"
nltk = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"